# MusicaLau

./: .gitignore  .gitmodules  CMakeLists.txt  MusicaLau.vpp  README.md  main.cpp
.cmake/api/v1/reply/: cache-v2-740128aeba277f7d37ba.json  cmakeFiles-v1-36b9405296e6447a27c0.json  codemodel-v2-3310cfeee2ec0f487dc5.json  index-2025-03-21T16-00-05-0353.json  target-ALL_BUILD-RelWithDebInfo-5ca830676077fa93ff47.json  target-MusicaLau-Debug-39f473027b6fae823a87.json  target-MusicaLau-MinSizeRel-3ddd42ab389126d61279.json  target-MusicaLau-RelWithDebInfo-5b379ad9b2fc5c16a966.json  target-MusicaLau-Release-35349962e59011f85323.json  target-ZERO_CHECK-Release-bf51682a95c32b2ecf37.json
.github/workflows/: release.yml
Resources/: mario2.txt
SDL3/i686-w64-mingw32/include/SDL3/: SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_hints.h  SDL_joystick.h  SDL_main.h  SDL_mouse.h  SDL_video.h
SDL3/i686-w64-mingw32/include/SDL3_image/: SDL_image.h
SDL3/x86_64-w64-mingw32/include/SDL3/: SDL_audio.h  SDL_events.h  SDL_guid.h  SDL_hidapi.h  SDL_metal.h  SDL_mixer.h  SDL_properties.h  SDL_ttf.h
Src/Controller/: Controller.cpp  InstrumentController.cpp  PianoAppController.cpp  ScoreController.cpp  VideoGameAppController.cpp  XylophoneAppController.cpp
Src/Utils/: AudioGenerator.cpp  FileManager.cpp  audio_utils.cpp
Src/View/: InstrumentSelectionView.cpp  PianoView.cpp  VideoGameView.cpp  View.cpp  XylophoneView.cpp
include/: Application.h
include/Audio/: AudioEngine.h  MusicFileReader.h  SDLAudioEngine.h  SongPlayer.h
include/Controller/: Button.h  Controller.h  InstrumentController.h
include/Core/: Instrument.h  Note.h
include/Instruments/: GuitarInstrument.h  PianoInstrument.h  XylophoneInstrument.h
include/Model/: Xylophone.h
include/SDL3/: SDL_asyncio.h  SDL_blendmode.h  SDL_filesystem.h  SDL_haptic.h  SDL_hidapi.h  SDL_iostream.h  SDL_mutex.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_thread.h  SDL_timer.h  SDL_video.h  SDL_vulkan.h
include/View/: ButtonView.h  ConsoleView.h  InstrumentSelectionView.h  PianoView.h
include/controller/: Controller.h  InstrumentController.h  PianoAppController.h  ScoreController.h  VideoGameAppController.h  XylophoneAppController.h
include/controllers/: Controller.h  InstrumentController.h  PianoAppController.h  XylophoneAppController.h
include/model/: Instrument.h  Note.h  Piano.h  Score.h  VideoGame.h  Xylophone.h
include/models/: VideoGame.h  Xylophone.h
include/utils/: AudioGenerator.h  DropdownMenu.h  FileManager.h  RandomMelodyGenerator.h  TextHelper.h  audio_utils.h  file_utils.h
include/view/: InstrumentSelectionView.h  PianoView.h  VideoGameView.h  View.h  XylophoneView.h
include/views/: PianoView.h  VideoGameView.h  XylophoneView.h  menu.cpp  menu.h
src/: Application.cpp  main.cpp
src/Audio/: AudioEngine.h  MusicFileReader.cpp  SDLAudioEngine.cpp  SDLAudioEngine.h  SongPlayer.cpp
src/Controller/: MusicController.cpp  MusicController.h
src/Core/: Instrument.h  Note.h
src/Instruments/: GuitarInstrument.cpp  GuitarInstrument.h  PianoInstrument.cpp  PianoInstrument.h  SimpleSynthInstrument.cpp  SimpleSynthInstrument.h  XylophoneInstrument.cpp  XylophoneInstrument.h
src/View/: ButtonView.cpp  ConsoleView.cpp
src/controller/: Controller.cpp  InstrumentController.cpp  PianoAppController.cpp  ScoreController.cpp  VideoGameAppController.cpp  XylophoneAppController.cpp
src/controllers/: Controller.cpp  InstrumentController.cpp  PianoAppController.cpp  ScoreController.cpp  VideoGameAppController.cpp  XylophoneAppController.cpp
src/model/: Instrument.cpp  Note.cpp  Piano.cpp  Score.cpp  VideoGame.cpp  Xylophone.cpp
src/models/: Instrument.cpp  Note.cpp  Piano.cpp  Score.cpp  VideoGame.cpp  Xylophone.cpp
src/utils/: DropdownMenu.cpp  RandomMelodyGenerator.cpp  TextHelper.cpp  file_utils.cpp
src/view/: InstrumentSelectionView.cpp  PianoView.cpp  VideoGameView.cpp  View.cpp  XylophoneView.cpp
src/views/: InstrumentSelectionView.cpp  PianoView.cpp  VideoGameView.cpp  View.cpp  XylophoneView.cpp
